pages restaurant ajoutée

--- a/accueil.html
+++ b/accueil.html
@@ -40,7 +40,7 @@
                 <p class="menu__info">
                     Découvrez des restaurants d'exception, sélectionnés par nos soins.
                 </p>
-                <button class="submit" placeholder="Explorer nos restaurants"></button>
+                <button class="submit">Explorer nos restaurants</button>
             </div>
         </section>
 
@@ -49,8 +49,10 @@
                 <h2 class="functioning__title">Fontionnement</h2>
                 <ol class="functioning__list">
                     <li>
+                        <a href="#">
                         <i class="fas fa-mobile-alt"></i>
                         Choississez un restaurant
+                        </a>
                     </li>
                     <li>
                         <i class="fas fa-list-ul"></i>
@@ -67,15 +69,15 @@
             <h2 class="container__title">Restaurants</h2>
             <div class="container__restaurant">
                 <div class="container__restaurant-card">
-                    <a href="#">
+                    <a href="./lapalettedugout.html">
                         <figure>
                             <img src="./assets/restaurants/lapalettedugout.jpg" alt="La palette du goût">
                             <figcaption>
-                                <h3>
+                                <h4>
                                     La palette du goût
-                                </h3>
+                                </h4>
                                 <p>
-                                    ménilmontant
+                                    Ménilmontant
                                 </p>
                                 <div class="heart">
                                     <i class="far fa-heart"></i>
@@ -85,13 +87,13 @@
                     </a>
                 </div>
                 <div class="container__restaurant-card">
-                    <a href="#">
+                    <a href="./lanoteenchantée.html">
                         <figure>
                             <img src="./assets/restaurants/lanoteenchantee.jpg" alt="La note enchantée">
                             <figcaption>
-                                <h3>
+                                <h4>
                                     La note enchantée
-                                </h3>
+                                </h4>
                                 <p>
                                     Charonne
                                 </p>
@@ -103,13 +105,13 @@
                     </a>
                 </div>
                 <div class="container__restaurant-card">
-                    <a href="#">
+                    <a href="./alafrancaise.html">
                         <figure>
                             <img src="./assets/restaurants/alafrancaise.jpg" alt="À la française">
                             <figcaption>
-                                <h3>
+                                <h4>
                                     À la française
-                                </h3>
+                                </h4>
                                 <p>
                                     Cité Rouge
                                 </p>
@@ -121,13 +123,13 @@
                     </a>
                 </div>
                 <div class="container__restaurant-card">
-                    <a href="#">
+                    <a href="./ledelicedessens.html">
                         <figure>
                             <img src="./assets/restaurants/ledelicedessens.jpg" alt="Le délice des sens">
                             <figcaption>
-                                <h3>
+                                <h4>
                                     Le délice des sens
-                                </h3>
+                                </h4>
                                 <p>
                                     Folie_Méricourt
                                 </p>
