--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -26,8 +26,8 @@
         <div class="logo"><img src="./assets/logo/ohmyfood.png" alt="Logo"></div>
     </header>
     <main>
-        <div>
-            <img src="./assets/restaurants/lapalettedugout.jpg" alt="">
+        <div class="bg">
+            <img src="./assets/restaurants/lapalettedugout.jpg" alt="La palette du gout">
         </div>
         <div class="card">
             <div class="title">
@@ -35,11 +35,11 @@
                 <i class="far fa-heart"></i>
             </div>
             <div class="card__menu">
-                <p>ENTRÉES</p>
+                <h4>ENTRÉES</h4>
                 <div class="card__menu__item">
                     <div class="meal">
                         <div class="meal__info">
-                            <h4>Fricassée d'escargot</h4>
+                            <h5>Fricassée d'escargot</h5>
                             <p>Au piment d'espelette</p>
                         </div>
                         <div class="meal__price">
@@ -48,7 +48,7 @@
                     </div>
                     <div class="meal">
                         <div class="meal__info">
-                            <h4>Foie gras de canard mi-cuit</h4>
+                            <h5>Foie gras de canard mi-cuit</h5>
                             <p>Et ses copeaux de truffe noire</p>
                         </div>
                         <div class="meal__price">
@@ -57,7 +57,7 @@
                     </div>
                     <div class="meal">
                         <div class="meal__info">
-                            <h4>Oeuf au plat</h4>
+                            <h5>Oeuf au plat</h5>
                             <p>Assaisonné à la truffe sur lit de caviar</p>
                         </div>
                         <div class="meal__price">
@@ -67,11 +67,11 @@
                 </div>
             </div>
             <div class="card__menu">
-                <p>PLATS</p>
+                <h4>PLATS</h4>
                 <div class="card__menu__item">
                     <div class="meal">
                         <div class="meal__info">
-                            <h4>Filet de boeuf aux herbes</h4>
+                            <h5>Filet de boeuf aux herbes</h5>
                             <p>Accompagné de sa ribambelle de légumes</p>
                         </div>
                         <div class="meal__price">
@@ -80,7 +80,7 @@
                     </div>
                     <div class="meal">
                         <div class="meal__info">
-                            <h4>Parmentier de queue de boeuf</h4>
+                            <h5>Parmentier de queue de boeuf</h5>
                             <p>À la truffe noire sur sa purée de panais</p>
                         </div>
                         <div class="meal__price">
@@ -89,7 +89,7 @@
                     </div>
                     <div class="meal">
                         <div class="meal__info">
-                            <h4>Filet de Turbot</h4>
+                            <h5>Filet de Turbot</h5>
                             <p>Aux agrumes</p>
                         </div>
                         <div class="meal__price">
@@ -99,11 +99,11 @@
                 </div>
             </div>
             <div class="card__menu">
-                <p>DESSERTS</p>
+                <h4>DESSERTS</h4>
                 <div class="card__menu__item">
                     <div class="meal">
                         <div class="meal__info">
-                            <h4>Paris-Brest</h4>
+                            <h5>Paris-Brest</h5>
                             <p>Revisité</p>
                         </div>
                         <div class="meal__price">
@@ -114,7 +114,7 @@
                 <div class="card__menu__item">
                     <div class="meal">
                         <div class="meal__info">
-                            <h4>Macaron au chocolat d'exception</h4>
+                            <h5>Macaron au chocolat d'exception</h5>
                             <p>Et glace à la vanille de Madagascar</p>
                         </div>
                         <div class="meal__price">
@@ -125,7 +125,7 @@
                 <div class="card__menu__item">
                     <div class="meal">
                         <div class="meal__info">
-                            <h4>Mousse au chocolat</h4>
+                            <h5>Mousse au chocolat</h5>
                             <p>Au piment d'espelette et à la truffe noire</p>
                         </div>
                         <div class="meal__price">
