resto  mise en page

--- a/accueil.html
+++ b/accueil.html
@@ -51,7 +51,7 @@
                     <li>
                         <a href="#">
                         <i class="fas fa-mobile-alt"></i>
-                        Choississez un restaurant
+                        Choisissez un restaurant
                         </a>
                     </li>
                     <li>
@@ -87,7 +87,7 @@
                     </a>
                 </div>
                 <div class="container__restaurant-card">
-                    <a href="./lanoteenchantée.html">
+                    <a href="./lanoteenchantee.html">
                         <figure>
                             <img src="./assets/restaurants/lanoteenchantee.jpg" alt="La note enchantée">
                             <figcaption>
