--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -26,117 +26,119 @@
         <div class="logo"><img src="./assets/logo/ohmyfood.png" alt="Logo"></div>
     </header>
     <main>
-        <div>
+        <div class="bg">
             <img src="./assets/restaurants/lapalettedugout.jpg" alt="">
         </div>
-        <div class="card">
+        <div class="container">
             <div class="title">
                 <h3>À la française</h3>
                 <i class="far fa-heart"></i>
             </div>
-            <div class="card__menu">
-                <p>ENTRÉES</p>
-                <div class="card__menu__item">
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h4>Tartare de thon</h4>
-                            <p>Assaisonné au yuzu</p>
+            <div class="card">
+                <div class="card__menu">
+                    <h4>ENTRÉES</h4>
+                    <div class="card__menu__item">
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Tartare de thon</h5>
+                                <p>Assaisonné au yuzu</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>25€</p>
+                            </div>
                         </div>
-                        <div class="meal__price">
-                            <p>25€</p>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Bouchée de homard croustillant</h5>
+                                <p>Et sa farandole de petits légumes</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>35€</p>
+                            </div>
+                        </div>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Velouté de cèpes</h5>
+                                <p>Aux truffes</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>20€</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h4>Bouchée de homard croustillant</h4>
-                            <p>Et sa farandole de petits légumes</p>
+                </div>
+                <div class="card__menu">
+                    <h4>PLATS</h4>
+                    <div class="card__menu__item">
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Poulet rôti aux herbes de Provence</h5>
+                                <p>Et sa crème de truffe</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>40€</p>
+                            </div>
                         </div>
-                        <div class="meal__price">
-                            <p>35€</p>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Langouste rôtie</h5>
+                                <p>Et ses légumes de saison</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>35€</p>
+                            </div>
+                        </div>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Côte de boeuf Angus</h5>
+                                <p>Et sa purée de panais</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>44€</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h4>Velouté de cèpes</h4>
-                            <p>Aux truffes</p>
+                </div>
+                <div class="card__menu">
+                    <h4>DESSERTS</h4>
+                    <div class="card__menu__item">
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Farandole de desserts</h5>
+                                <p>Du chef</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>18€</p>
+                            </div>
                         </div>
-                        <div class="meal__price">
-                            <p>20€</p>
+                    </div>
+                    <div class="card__menu__item">
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Crème brulée</h5>
+                                <p>Revisitée</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>22€</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card__menu__item">
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Tiramisu</h5>
+                                <p>À la noisette</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>23€</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="card__menu">
-                <p>PLATS</p>
-                <div class="card__menu__item">
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h4>Poulet rôti aux herbes de Provence</h4>
-                            <p>Et sa crème de truffe</p>
-                        </div>
-                        <div class="meal__price">
-                            <p>40€</p>
-                        </div>
-                    </div>
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h4>Langouste rôtie</h4>
-                            <p>Et ses légumes de saison</p>
-                        </div>
-                        <div class="meal__price">
-                            <p>35€</p>
-                        </div>
-                    </div>
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h4>Côte de boeuf Angus</h4>
-                            <p>Et sa purée de panais</p>
-                        </div>
-                        <div class="meal__price">
-                            <p>44€</p>
-                        </div>
-                    </div>
-                </div>
+            <div class="order-button">
+                <button type="submit">Commander</button>
             </div>
-            <div class="card__menu">
-                <p>DESSERTS</p>
-                <div class="card__menu__item">
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h4>Farandole de desserts</h4>
-                            <p>Du chef</p>
-                        </div>
-                        <div class="meal__price">
-                            <p>18€</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card__menu__item">
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h4>Crème brulée</h4>
-                            <p>Revisitée</p>
-                        </div>
-                        <div class="meal__price">
-                            <p>22€</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card__menu__item">
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h4>Tiramisu</h4>
-                            <p>À la noisette</p>
-                        </div>
-                        <div class="meal__price">
-                            <p>23€</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="order-button">
-            <button type="submit">Commander</button>
         </div>
     </main>
     <footer>
