--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -26,126 +26,128 @@
         <div class="logo"><img src="./assets/logo/ohmyfood.png" alt="Logo"></div>
     </header>
     <main>
-        <div>
+        <div class="bg">
             <img src="./assets/restaurants/lapalettedugout.jpg" alt="">
         </div>
-        <div class="card">
+        <div class="container">
             <div class="title">
                 <h3>La note enchantée</h3>
                 <i class="far fa-heart"></i>
             </div>
-            <div class="card__menu">
-                <p>ENTRÉES</p>
-                <div class="card__menu__item">
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h4>Ravioles de foie gras</h4>
-                            <p>Accompagnés de leur crème à la truffe</p>
+            <div class="card">
+                <div class="card__menu">
+                    <h4>ENTRÉES</h4>
+                    <div class="card__menu__item">
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Ravioles de foie gras</h5>
+                                <p>Accompagnés de leur crème à la truffe</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>25€</p>
+                            </div>
                         </div>
-                        <div class="meal__price">
-                            <p>25€</p>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Caviar osciètre</h5>
+                                <p>Sur blini à la farine de blé noir</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>35€</p>
+                            </div>
+                        </div>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Homard et espuma de potiron</h5>
+                                <p>Mariné aux zestes d'orange</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>20€</p>
+                            </div>
+                        </div>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Foie gras de canard cuit entier</h5>
+                                <p>Confiture de figue et pain toasté</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>35€</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h4>Caviar osciètre</h4>
-                            <p>Sur blini à la farine de blé noir</p>
+                </div>
+                <div class="card__menu">
+                    <h4>PLATS</h4>
+                    <div class="card__menu__item">
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Noix de coquilles Saint-Jacques</h5>
+                                <p>Sur lit de purée de céleri-rave</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>40€</p>
+                            </div>
                         </div>
-                        <div class="meal__price">
-                            <p>35€</p>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Langoustine poêlée</h5>
+                                <p>Purée de patate douce</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>35€</p>
+                            </div>
+                        </div>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Mijoté de queue de boeuf </h5>
+                                <p>Et riz sauvage aux zestes de citron</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>44€</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h4>Homard et espuma de potiron</h4>
-                            <p>Mariné aux zestes d'orange</p>
-                        </div>
-                        <div class="meal__price">
-                            <p>20€</p>
+                </div>
+                <div class="card__menu">
+                    <h4>DESSERTS</h4>
+                    <div class="card__menu__item">
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Macaron noisette et chocolat</h5>
+                                <p>Glace au caramel brun et sel de Guérande</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>18€</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h4>Foie gras de canard cuit entier</h4>
-                            <p>Confiture de figue et pain toasté</p>
+                    <div class="card__menu__item">
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Baba au rhum revisité </h5>
+                                <p>Avec son coulis de citron</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>22€</p>
+                            </div>
                         </div>
-                        <div class="meal__price">
-                            <p>35€</p>
+                    </div>
+                    <div class="card__menu__item">
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Tarte au citron meringuée </h5>
+                                <p>Déstructurée</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>23€</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="card__menu">
-                <p>PLATS</p>
-                <div class="card__menu__item">
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h4>Noix de coquilles Saint-Jacques</h4>
-                            <p>Sur lit de purée de céleri-rave</p>
-                        </div>
-                        <div class="meal__price">
-                            <p>40€</p>
-                        </div>
-                    </div>
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h4>Langoustine poêlée</h4>
-                            <p>Purée de patate douce</p>
-                        </div>
-                        <div class="meal__price">
-                            <p>35€</p>
-                        </div>
-                    </div>
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h4>Mijoté de queue de boeuf </h4>
-                            <p>Et riz sauvage aux zestes de citron</p>
-                        </div>
-                        <div class="meal__price">
-                            <p>44€</p>
-                        </div>
-                    </div>
-                </div>
+            <div class="order-button">
+                <button type="submit">Commander</button>
             </div>
-            <div class="card__menu">
-                <p>DESSERTS</p>
-                <div class="card__menu__item">
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h4>Macaron noisette et chocolat</h4>
-                            <p>Glace au caramel brun et sel de Guérande</p>
-                        </div>
-                        <div class="meal__price">
-                            <p>18€</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card__menu__item">
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h4>Baba au rhum revisité </h4>
-                            <p>Avec son coulis de citron</p>
-                        </div>
-                        <div class="meal__price">
-                            <p>22€</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card__menu__item">
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h4>Tarte au citron meringuée </h4>
-                            <p>Déstructurée</p>
-                        </div>
-                        <div class="meal__price">
-                            <p>23€</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="order-button">
-            <button type="submit">Commander</button>
         </div>
     </main>
     <footer>
