--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -29,114 +29,117 @@
         <div class="bg">
             <img src="./assets/restaurants/lapalettedugout.jpg" alt="La palette du gout">
         </div>
-        <div class="card">
+        <div class="container-menu">
             <div class="title">
                 <h3>La palette du goût</h3>
                 <i class="far fa-heart"></i>
             </div>
-            <div class="card__menu">
-                <h4>ENTRÉES</h4>
-                <div class="card__menu__item">
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h5>Fricassée d'escargot</h5>
-                            <p>Au piment d'espelette</p>
+            <div class="card">
+                <div class="card__menu">
+                    <h4>ENTRÉES</h4>
+                    <div class="card__menu__item">
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Fricassée d'escargot</h5>
+                                <p>Au piment d'espelette</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>25€</p>
+                            </div>
                         </div>
-                        <div class="meal__price">
-                            <p>25€</p>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Foie gras de canard mi-cuit</h5>
+                                <p>Et ses copeaux de truffe noire</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>35€</p>
+                            </div>
+                        </div>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Oeuf au plat</h5>
+                                <p>Assaisonné à la truffe sur lit de caviar</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>20€</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h5>Foie gras de canard mi-cuit</h5>
-                            <p>Et ses copeaux de truffe noire</p>
+                </div>
+                <div class="card__menu">
+                    <h4>PLATS</h4>
+                    <div class="card__menu__item">
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Filet de boeuf aux herbes</h5>
+                                <p>Accompagné de sa ribambelle de légumes</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>40€</p>
+                            </div>
                         </div>
-                        <div class="meal__price">
-                            <p>35€</p>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Parmentier de queue de boeuf</h5>
+                                <p>À la truffe noire sur sa purée de panais</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>35€</p>
+                            </div>
+                        </div>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Filet de Turbot</h5>
+                                <p>Aux agrumes</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>44€</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h5>Oeuf au plat</h5>
-                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                </div>
+                <div class="card__menu">
+                    <h4>DESSERTS</h4>
+                    <div class="card__menu__item">
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Paris-Brest</h5>
+                                <p>Revisité</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>18€</p>
+                            </div>
                         </div>
-                        <div class="meal__price">
-                            <p>20€</p>
+                    </div>
+                    <div class="card__menu__item">
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Macaron au chocolat d'exception</h5>
+                                <p>Et glace à la vanille de Madagascar</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>22€</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card__menu__item">
+                        <div class="meal">
+                            <div class="meal__info">
+                                <h5>Mousse au chocolat</h5>
+                                <p>Au piment d'espelette et à la truffe noire</p>
+                            </div>
+                            <div class="meal__price">
+                                <p>23€</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="card__menu">
-                <h4>PLATS</h4>
-                <div class="card__menu__item">
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h5>Filet de boeuf aux herbes</h5>
-                            <p>Accompagné de sa ribambelle de légumes</p>
-                        </div>
-                        <div class="meal__price">
-                            <p>40€</p>
-                        </div>
-                    </div>
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h5>Parmentier de queue de boeuf</h5>
-                            <p>À la truffe noire sur sa purée de panais</p>
-                        </div>
-                        <div class="meal__price">
-                            <p>35€</p>
-                        </div>
-                    </div>
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h5>Filet de Turbot</h5>
-                            <p>Aux agrumes</p>
-                        </div>
-                        <div class="meal__price">
-                            <p>44€</p>
-                        </div>
-                    </div>
-                </div>
+
+            <div class="order-button">
+                <button type="submit">Commander</button>
             </div>
-            <div class="card__menu">
-                <h4>DESSERTS</h4>
-                <div class="card__menu__item">
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h5>Paris-Brest</h5>
-                            <p>Revisité</p>
-                        </div>
-                        <div class="meal__price">
-                            <p>18€</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card__menu__item">
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h5>Macaron au chocolat d'exception</h5>
-                            <p>Et glace à la vanille de Madagascar</p>
-                        </div>
-                        <div class="meal__price">
-                            <p>22€</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card__menu__item">
-                    <div class="meal">
-                        <div class="meal__info">
-                            <h5>Mousse au chocolat</h5>
-                            <p>Au piment d'espelette et à la truffe noire</p>
-                        </div>
-                        <div class="meal__price">
-                            <p>23€</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="order-button">
-            <button type="submit">Commander</button>
         </div>
     </main>
     <footer>
