Remise en mobil-first

--- a/accueil.html
+++ b/accueil.html
@@ -13,7 +13,7 @@
     </style>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-        </style>
+    </style>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Ohmyfood</title>
@@ -21,7 +21,7 @@
 
 <body>
     <header>
-        <div class="logo"><img src="./assets/logo/ohmyfood.png" alt="Logo"></div>
+        <div class="logo"><img src="./assets/logo/ohmyfood@2x.svg" alt="Logo"></div>
     </header>
 
     <main>
@@ -46,21 +46,25 @@
 
         <section>
             <div class="functioning">
-                <h2 class="functioning__title">Fontionnement</h2>
+                <h2 class="functioning__title">Fonctionnement</h2>
                 <ol class="functioning__list">
                     <li>
                         <a href="#">
-                        <i class="fas fa-mobile-alt"></i>
-                        Choisissez un restaurant
+                            <i class="fas fa-mobile-alt"></i>
+                            Choisissez un restaurant
                         </a>
                     </li>
                     <li>
-                        <i class="fas fa-list-ul"></i>
-                        Composez votre menu
+                        <a href="#">
+                            <i class="fas fa-list-ul"></i>
+                            Composez votre menu
+                        </a>
                     </li>
                     <li>
-                        <i class="fas fa-store"></i>
-                        Dégustez au restaurant
+                        <a href="#">
+                            <i class="fas fa-store"></i>
+                            Dégustez au restaurant
+                        </a>
                     </li>
                 </ol>
             </div>
@@ -131,7 +135,7 @@
                                     Le délice des sens
                                 </h4>
                                 <p>
-                                    Folie_Méricourt
+                                    Folie-Méricourt
                                 </p>
                                 <div class="heart">
                                     <i class="far fa-heart"></i>
@@ -144,7 +148,7 @@
         </section>
     </main>
     <footer>
-        <h3>ohmyfood</h3>
+        <p>ohmyfood</p>
         <ul>
             <li>
                 <a href="#">
