--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -23,7 +23,7 @@
 <body>
     <header>
         <a href="./accueil.html"><i class="fas fa-arrow-left"></i></a>
-        <div class="logo"><img src="./assets/logo/ohmyfood.png" alt="Logo"></div>
+        <div class="logo"><img src="./assets/logo/ohmyfood@2x.svg" alt="Logo"></div>
     </header>
     <main>
         <div class="bg">
@@ -136,7 +136,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="order-button">
                 <button type="submit">Commander</button>
             </div>
