--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -23,13 +23,13 @@
 <body>
     <header>
         <a href="./accueil.html"><i class="fas fa-arrow-left"></i></a>
-        <div class="logo"><img src="./assets/logo/ohmyfood.png" alt="Logo"></div>
+        <div class="logo"><img src="./assets/logo/ohmyfood@2x.svg" alt="Logo"></div>
     </header>
     <main>
         <div class="bg">
-            <img src="./assets/restaurants/lapalettedugout.jpg" alt="">
+            <img src="./assets/restaurants/ledelicedessens.jpg" alt="Le délice des sens">
         </div>
-        <div class="container">
+        <div class="container-menu">
             <div class="title">
                 <h3>Le délice des sens</h3>
                 <i class="far fa-heart"></i>
@@ -40,8 +40,8 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Ravioles de foie gras</h5>
-                                <p>Accompagnés de leur crème à la truffe</p>
+                                <h5>Tartare de thon</h5>
+                                <p>Assaisonné au yuzu</p>
                             </div>
                             <div class="meal__price">
                                 <p>25€</p>
@@ -49,8 +49,8 @@
                         </div>
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Caviar osciètre</h5>
-                                <p>Sur blini à la farine de blé noir</p>
+                                <h5>Bouchée de homard croustillant</h5>
+                                <p>Et sa farandole de petits légumes</p>
                             </div>
                             <div class="meal__price">
                                 <p>35€</p>
@@ -58,20 +58,11 @@
                         </div>
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Homard et espuma de potiron</h5>
-                                <p>Mariné aux zestes d'orange</p>
+                                <h5>Velouté de cèpes</h5>
+                                <p>Aux truffes</p>
                             </div>
                             <div class="meal__price">
                                 <p>20€</p>
-                            </div>
-                        </div>
-                        <div class="meal">
-                            <div class="meal__info">
-                                <h5>Foie gras de canard cuit entier</h5>
-                                <p>Confiture de figue et pain toasté</p>
-                            </div>
-                            <div class="meal__price">
-                                <p>35€</p>
                             </div>
                         </div>
                     </div>
@@ -81,8 +72,8 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Noix de coquilles Saint-Jacques</h5>
-                                <p>Sur lit de purée de céleri-rave</p>
+                                <h5>Poulet rôti aux herbes de Provence</h5>
+                                <p>Et sa crème de truffe</p>
                             </div>
                             <div class="meal__price">
                                 <p>40€</p>
@@ -90,8 +81,8 @@
                         </div>
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Langoustine poêlée</h5>
-                                <p>Purée de patate douce</p>
+                                <h5>Langouste rôtie</h5>
+                                <p>Et ses légumes de saison</p>
                             </div>
                             <div class="meal__price">
                                 <p>35€</p>
@@ -99,8 +90,8 @@
                         </div>
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Mijoté de queue de boeuf </h5>
-                                <p>Et riz sauvage aux zestes de citron</p>
+                                <h5>Côte de boeuf Angus</h5>
+                                <p>Et sa purée de panais</p>
                             </div>
                             <div class="meal__price">
                                 <p>44€</p>
@@ -113,8 +104,8 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Macaron noisette et chocolat</h5>
-                                <p>Glace au caramel brun et sel de Guérande</p>
+                                <h5>Farandole de desserts</h5>
+                                <p>Du chef</p>
                             </div>
                             <div class="meal__price">
                                 <p>18€</p>
@@ -124,8 +115,8 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Baba au rhum revisité </h5>
-                                <p>Avec son coulis de citron</p>
+                                <h5>Crème brulée</h5>
+                                <p>Revisitée</p>
                             </div>
                             <div class="meal__price">
                                 <p>22€</p>
@@ -135,8 +126,8 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Tarte au citron meringuée </h5>
-                                <p>Déstructurée</p>
+                                <h5>Tiramisu</h5>
+                                <p>À la noisette</p>
                             </div>
                             <div class="meal__price">
                                 <p>23€</p>
