--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" media="screen and (max-width: 992px)" href="./CSS/tablet.css">
-    <link rel="stylesheet" media="screen and (max-width: 768px)" href="./CSS/mobil.css">
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
     </style>
@@ -23,13 +22,13 @@
 <body>
     <header>
         <a href="./accueil.html"><i class="fas fa-arrow-left"></i></a>
-        <div class="logo"><img src="./assets/logo/ohmyfood.png" alt="Logo"></div>
+        <div class="logo"><img src="./assets/logo/ohmyfood@2x.svg" alt="Logo"></div>
     </header>
     <main>
         <div class="bg">
-            <img src="./assets/restaurants/lapalettedugout.jpg" alt="">
+            <img src="./assets/restaurants/alafrancaise.jpg" alt="À la française">
         </div>
-        <div class="container">
+        <div class="container-menu">
             <div class="title">
                 <h3>À la française</h3>
                 <i class="far fa-heart"></i>
@@ -40,8 +39,8 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Tartare de thon</h5>
-                                <p>Assaisonné au yuzu</p>
+                                <h5>Tartare de poulpe acidulé</h5>
+                                <p>Aux zestes d'orange</p>
                             </div>
                             <div class="meal__price">
                                 <p>25€</p>
@@ -49,8 +48,8 @@
                         </div>
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Bouchée de homard croustillant</h5>
-                                <p>Et sa farandole de petits légumes</p>
+                                <h5>Velouté de légumes d'antan</h5>
+                                <p>Carotte, panais, topinambour</p>
                             </div>
                             <div class="meal__price">
                                 <p>35€</p>
@@ -58,8 +57,8 @@
                         </div>
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Velouté de cèpes</h5>
-                                <p>Aux truffes</p>
+                                <h5>Soupe à l'oignon</h5>
+                                <p>Revisitée</p>
                             </div>
                             <div class="meal__price">
                                 <p>20€</p>
@@ -72,8 +71,8 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Poulet rôti aux herbes de Provence</h5>
-                                <p>Et sa crème de truffe</p>
+                                <h5>Coquilles Saint-Jacques</h5>
+                                <p>Accompagnées d'une purée de panais</p>
                             </div>
                             <div class="meal__price">
                                 <p>40€</p>
@@ -81,8 +80,8 @@
                         </div>
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Langouste rôtie</h5>
-                                <p>Et ses légumes de saison</p>
+                                <h5>Magret de canard</h5>
+                                <p>Et parmentier de pommes de terre</p>
                             </div>
                             <div class="meal__price">
                                 <p>35€</p>
@@ -90,8 +89,8 @@
                         </div>
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Côte de boeuf Angus</h5>
-                                <p>Et sa purée de panais</p>
+                                <h5>Pigeonneau d’Ille-et-Vilaine</h5>
+                                <p>Sur son lit de gnocchis aux légumes</p>
                             </div>
                             <div class="meal__price">
                                 <p>44€</p>
@@ -104,8 +103,8 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Farandole de desserts</h5>
-                                <p>Du chef</p>
+                                <h5>Pétales de violettes glacés</h5>
+                                <p>Et purée de noisettes</p>
                             </div>
                             <div class="meal__price">
                                 <p>18€</p>
@@ -115,8 +114,8 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Crème brulée</h5>
-                                <p>Revisitée</p>
+                                <h5>Fondant au chocolat</h5>
+                                <p>Revisité</p>
                             </div>
                             <div class="meal__price">
                                 <p>22€</p>
@@ -126,8 +125,8 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Tiramisu</h5>
-                                <p>À la noisette</p>
+                                <h5>Millefeuille croustillant</h5>
+                                <p>Myrtilles et pâte d’amande</p>
                             </div>
                             <div class="meal__price">
                                 <p>23€</p>
@@ -142,7 +141,7 @@
         </div>
     </main>
     <footer>
-        <h3>ohmyfood</h3>
+        <p>ohmyfood</p>
         <ul>
             <li>
                 <a href="#">
