--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -23,13 +23,13 @@
 <body>
     <header>
         <a href="./accueil.html"><i class="fas fa-arrow-left"></i></a>
-        <div class="logo"><img src="./assets/logo/ohmyfood.png" alt="Logo"></div>
+        <div class="logo"><img src="./assets/logo/ohmyfood@2x.svg" alt="Logo"></div>
     </header>
     <main>
         <div class="bg">
-            <img src="./assets/restaurants/lapalettedugout.jpg" alt="">
+            <img src="./assets/restaurants/lanoteenchantee.jpg" alt="La note enchantée">
         </div>
-        <div class="container">
+        <div class="container-menu">
             <div class="title">
                 <h3>La note enchantée</h3>
                 <i class="far fa-heart"></i>
