--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -32,7 +32,7 @@
         <div class="container-menu">
             <div class="title">
                 <h3>La palette du goût</h3>
-                <i class="far fa-heart"></i>
+                <i class="fas fa-heart"></i>
             </div>
             <div class="card">
                 <div class="card__menu">
