--- a/accueil.html
+++ b/accueil.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" media="screen and (max-width: 992px)" href="./CSS/tablet.css">
-    <link rel="stylesheet" media="screen and (max-width: 768px)" href="./CSS/mobil.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
     </style>
@@ -20,6 +18,13 @@
 </head>
 
 <body>
+
+    <section class="loading">
+        <div class="loading__spinner">
+            <div class="loading__spinner2"></div>
+        </div>
+    </section>
+
     <header>
         <div class="logo"><img src="./assets/logo/ohmyfood@2x.svg" alt="Logo"></div>
     </header>
@@ -50,18 +55,21 @@
                 <ol class="functioning__list">
                     <li>
                         <a href="#">
+                            <div class="number">1</div>
                             <i class="fas fa-mobile-alt"></i>
                             Choisissez un restaurant
                         </a>
                     </li>
                     <li>
                         <a href="#">
+                            <div class="number">2</div>
                             <i class="fas fa-list-ul"></i>
                             Composez votre menu
                         </a>
                     </li>
                     <li>
                         <a href="#">
+                            <div class="number">3</div>
                             <i class="fas fa-store"></i>
                             Dégustez au restaurant
                         </a>
@@ -85,7 +93,7 @@
                                     Ménilmontant
                                 </p>
                                 <div class="heart">
-                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-heart" aria-hidden="true"></i>
                                 </div>
                             </figcaption>
                         </figure>
@@ -104,7 +112,7 @@
                                     Charonne
                                 </p>
                                 <div class="heart">
-                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-heart" aria-hidden="true"></i>
                                 </div>
                             </figcaption>
                         </figure>
@@ -122,7 +130,7 @@
                                     Cité Rouge
                                 </p>
                                 <div class="heart">
-                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-heart" aria-hidden="true"></i>
                                 </div>
                             </figcaption>
                         </figure>
@@ -140,7 +148,7 @@
                                     Folie-Méricourt
                                 </p>
                                 <div class="heart">
-                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-heart" aria-hidden="true"></i>
                                 </div>
                             </figcaption>
                         </figure>
