animation arrivée resto

--- a/accueil.html
+++ b/accueil.html
@@ -19,11 +19,11 @@
 
 <body>
 
-    <section class="loading">
+    <div class="loading">
         <div class="loading__spinner">
             <div class="loading__spinner2"></div>
         </div>
-    </section>
+    </div>
 
     <header>
         <div class="logo"><img src="./assets/logo/ohmyfood@2x.svg" alt="Logo"></div>
