--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -23,7 +23,7 @@
 <body>
     <header>
         <a href="./accueil.html"><i class="fas fa-arrow-left"></i></a>
-        <div class="logo"><img src="./assets/logo/ohmyfood@2x.svg" alt="Logo"></div>
+        <h1 class="logo">ohmyfood</h1>
     </header>
     <main>
         <div class="bg">
@@ -31,18 +31,18 @@
         </div>
         <div class="container-menu">
             <div class="title">
-                <h3>Le délice des sens</h3>
-                <i class="far fa-heart"></i>
+                <h2>Le délice des sens</h2>
+                <i class="fas fa-heart"></i>
             </div>
             <div class="card">
-                <div class="card__menu">
-                    <h4>ENTRÉES</h4>
+                <div class="card__menu anim1">
+                    <h3>ENTRÉES</h3>
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
                                 <div class="meal__info__text">
-                                    <h5>Tartare de thon</h5>
-                                    <p>Assaisonné au yuzu</p>
+                                    <h4 class="meal__info__title">Tartare de thon</h4>
+                                    <p class="meal__info__desc">Assaisonné au yuzu</p>
                                 </div>
                                 <p class="meal__price">25€</p>
                             </div>
@@ -53,8 +53,8 @@
                         <div class="meal">
                             <div class="meal__info">
                                 <div class="meal__info__text">
-                                    <h5>Bouchée de homard croustillant</h5>
-                                    <p>Et sa farandole de petits légumes</p>
+                                    <h4 class="meal__info__title">Bouchée de homard croustillant</h4>
+                                    <p class="meal__info__desc">Et sa farandole de petits légumes</p>
                                 </div>
                                 <p class="meal__price">35€</p>
                             </div>
@@ -65,8 +65,8 @@
                         <div class="meal">
                             <div class="meal__info">
                                 <div class="meal__info__text">
-                                    <h5>Velouté de cèpes</h5>
-                                    <p>Aux truffes</p>
+                                    <h4 class="meal__info__title">Velouté de cèpes</h4>
+                                    <p class="meal__info__desc">Aux truffes</p>
                                 </div>
                                 <p class="meal__price">20€</p>
                             </div>
@@ -76,14 +76,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu">
-                    <h4>PLATS</h4>
+                <div class="card__menu anim2">
+                    <h3>PLATS</h3>
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
                                 <div class="meal__info__text">
-                                    <h5>Poulet rôti aux herbes de Provence</h5>
-                                    <p>Et sa crème de truffe</p>
+                                    <h4 class="meal__info__title">Poulet rôti aux herbes de Provence</h4>
+                                    <p class="meal__info__desc">Et sa crème de truffe</p>
                                 </div>
                                 <p class="meal__price">40€</p>
                             </div>
@@ -95,8 +95,8 @@
                         <div class="meal">
                             <div class="meal__info">
                                 <div class="meal__info__text">
-                                    <h5>Langouste rôtie</h5>
-                                    <p>Et ses légumes de saison</p>
+                                    <h4 class="meal__info__title">Langouste rôtie</h4>
+                                    <p class="meal__info__desc">Et ses légumes de saison</p>
                                 </div>
                                 <p class="meal__price">35€</p>
                             </div>
@@ -108,8 +108,8 @@
                         <div class="meal">
                             <div class="meal__info">
                                 <div class="meal__info__text">
-                                    <h5>Côte de boeuf Angus</h5>
-                                    <p>Et sa purée de panais</p>
+                                    <h4 class="meal__info__title">Côte de boeuf Angus</h4>
+                                    <p class="meal__info__desc">Et sa purée de panais</p>
                                 </div>
                                 <p class="meal__price">44€</p>
                             </div>
@@ -120,14 +120,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu">
-                    <h4>DESSERTS</h4>
+                <div class="card__menu anim3">
+                    <h3>DESSERTS</h3>
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
                                 <div class="meal__info__text">
-                                    <h5>Farandole de desserts</h5>
-                                    <p>Du chef</p>
+                                    <h4 class="meal__info__title">Farandole de desserts</h4>
+                                    <p class="meal__info__desc">Du chef</p>
                                 </div>
                                 <p class="meal__price">18€</p>
                             </div>
@@ -139,8 +139,8 @@
                         <div class="meal">
                             <div class="meal__info">
                                 <div class="meal__info__text">
-                                    <h5>Crème brulée</h5>
-                                    <p>Revisitée</p>
+                                    <h4 class="meal__info__title">Crème brulée</h4>
+                                    <p class="meal__info__desc">Revisitée</p>
                                 </div>
                                 <p class="meal__price">22€</p>
                             </div>
@@ -152,8 +152,8 @@
                         <div class="meal">
                             <div class="meal__info">
                                 <div class="meal__info__text">
-                                    <h5>Tiramisu</h5>
-                                    <p>À la noisette</p>
+                                    <h4 class="meal__info__title">Tiramisu</h4>
+                                    <p class="meal__info__desc">À la noisette</p>
                                 </div>
                                 <p class="meal__price">23€</p>
                             </div>
