--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -23,7 +23,7 @@
 <body>
     <header>
         <a href="./accueil.html"><i class="fas fa-arrow-left"></i></a>
-        <div class="logo"><img src="./assets/logo/ohmyfood@2x.svg" alt="Logo"></div>
+        <h1 class="logo">ohmyfood</h1>
     </header>
     <main>
         <div class="bg">
@@ -31,18 +31,18 @@
         </div>
         <div class="container-menu">
             <div class="title">
-                <h3>La palette du goût</h3>
+                <h2>La palette du goût</h2>
                 <i class="fas fa-heart"></i>
             </div>
             <div class="card">
                 <div class="card__menu">
-                    <h4>ENTRÉES</h4>
-                    <div class="card__menu__item">
+                    <h3>ENTRÉES</h3>
+                    <div class="card__menu__item anim1">
                         <div class="meal">
                             <div class="meal__info">
                                 <div class="meal__info__text">
-                                    <h5>Fricassée d'escargot</h5>
-                                    <p>Au piment d'espelette</p>
+                                    <h4 class="meal__info__title">Fricassée d'escargot</h4>
+                                    <p class="meal__info__desc">Au piment d'espelette</p>
                                 </div>
                                 <p class="meal__price">25€</p>
                             </div>
@@ -53,8 +53,8 @@
                         <div class="meal">
                             <div class="meal__info">
                                 <div class="meal__info__text">
-                                    <h5>Foie gras de canard mi-cuit</h5>
-                                    <p>Et ses copeaux de truffe noire</p>
+                                    <h4 class="meal__info__title">Foie gras de canard mi-cuit</h4>
+                                    <p class="meal__info__desc">Et ses copeaux de truffe noire</p>
                                 </div>
                                 <p class="meal__price">35€</p>
                             </div>
@@ -65,8 +65,8 @@
                         <div class="meal">
                             <div class="meal__info">
                                 <div class="meal__info__text">
-                                    <h5>Oeuf au plat</h5>
-                                    <p>Assaisonné à la truffe sur lit de caviar</p>
+                                    <h4 class="meal__info__title">Oeuf au plat</h4>
+                                    <p class="meal__info__desc">Assaisonné à la truffe sur lit de caviar</p>
                                 </div>
                                 <p class="meal__price">20€</p>
                             </div>
@@ -77,13 +77,13 @@
                     </div>
                 </div>
                 <div class="card__menu">
-                    <h4>PLATS</h4>
-                    <div class="card__menu__item">
+                    <h3>PLATS</h3>
+                    <div class="card__menu__item anim2">
                         <div class="meal">
                             <div class="meal__info">
                                 <div class="meal__info__text">
-                                    <h5>Filet de boeuf aux herbes</h5>
-                                    <p>Accompagné de sa ribambelle de légumes</p>
+                                    <h4 class="meal__info__title">Filet de boeuf aux herbes</h4>
+                                    <p class="meal__info__desc">Accompagné de sa ribambelle de légumes</p>
                                 </div>
                                 <p class="meal__price">40€</p>
                             </div>
@@ -95,8 +95,8 @@
                         <div class="meal">
                             <div class="meal__info">
                                 <div class="meal__info__text">
-                                    <h5>Parmentier de queue de boeuf</h5>
-                                    <p>À la truffe noire sur sa purée de panais</p>
+                                    <h4 class="meal__info__title">Parmentier de queue de boeuf</h4>
+                                    <p class="meal__info__desc">À la truffe noire sur sa purée de panais</p>
                                 </div>
                                 <p class="meal__price">35€</p>
                             </div>
@@ -107,8 +107,8 @@
                         <div class="meal">
                             <div class="meal__info">
                                 <div class="meal__info__text">
-                                    <h5>Filet de Turbot</h5>
-                                    <p>Aux agrumes</p>
+                                    <h4 class="meal__info__title">Filet de Turbot</h4>
+                                    <p class="meal__info__desc">Aux agrumes</p>
                                 </div>
                                 <p class="meal__price">44€</p>
                             </div>
@@ -120,13 +120,13 @@
                     </div>
                 </div>
                 <div class="card__menu">
-                    <h4>DESSERTS</h4>
-                    <div class="card__menu__item">
+                    <h3>DESSERTS</h3>
+                    <div class="card__menu__item anim3">
                         <div class="meal">
                             <div class="meal__info">
                                 <div class="meal__info__text">
-                                    <h5>Paris-Brest</h5>
-                                    <p>Revisité</p>
+                                    <h4 class="meal__info__title">Paris-Brest</h4>
+                                    <p class="meal__info__desc">Revisité</p>
                                 </div>
                                 <p class="meal__price">18€</p>
                             </div>
@@ -137,8 +137,8 @@
                         <div class="meal">
                             <div class="meal__info">
                                 <div class="meal__info__text">
-                                    <h5>Macaron au chocolat d'exception</h5>
-                                    <p>Et glace à la vanille de Madagascar</p>
+                                    <h4 class="meal__info__title">Macaron au chocolat d'exception</h4>
+                                    <p class="meal__info__desc">Et glace à la vanille de Madagascar</p>
                                 </div>
                                 <p class="meal__price">22€</p>
                             </div>
@@ -150,8 +150,8 @@
                         <div class="meal">
                             <div class="meal__info">
                                 <div class="meal__info__text">
-                                    <h5>Mousse au chocolat</h5>
-                                    <p>Au piment d'espelette et à la truffe noire</p>
+                                    <h4 class="meal__info__title">Mousse au chocolat</h4>
+                                    <p class="meal__info__desc">Au piment d'espelette et à la truffe noire</p>
                                 </div>
                                 <p class="meal__price">23€</p>
                             </div>
