--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -37,8 +37,8 @@
             <div class="card">
                 <div class="card__menu">
                     <h3>ENTRÉES</h3>
-                    <div class="card__menu__item anim1">
-                        <div class="meal">
+                    <div class="card__menu__item">
+                        <div class="meal anim1">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Fricassée d'escargot</h4>
@@ -50,7 +50,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim2">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Foie gras de canard mi-cuit</h4>
@@ -62,7 +62,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim3">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Oeuf au plat</h4>
@@ -78,8 +78,8 @@
                 </div>
                 <div class="card__menu">
                     <h3>PLATS</h3>
-                    <div class="card__menu__item anim2">
-                        <div class="meal">
+                    <div class="card__menu__item">
+                        <div class="meal anim1">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Filet de boeuf aux herbes</h4>
@@ -92,7 +92,7 @@
                             </div>
                         </div>
 
-                        <div class="meal">
+                        <div class="meal anim2">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Parmentier de queue de boeuf</h4>
@@ -104,7 +104,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim3">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Filet de Turbot</h4>
@@ -121,8 +121,8 @@
                 </div>
                 <div class="card__menu">
                     <h3>DESSERTS</h3>
-                    <div class="card__menu__item anim3">
-                        <div class="meal">
+                    <div class="card__menu__item">
+                        <div class="meal anim1">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Paris-Brest</h4>
@@ -134,7 +134,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim2">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Macaron au chocolat d'exception</h4>
@@ -147,7 +147,7 @@
                             </div>
                         </div>
 
-                        <div class="meal">
+                        <div class="meal anim3">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Mousse au chocolat</h4>
