--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -36,8 +36,8 @@
             <div class="card">
                 <div class="card__menu">
                     <h3>ENTRÉES</h3>
-                    <div class="card__menu__item anim1">
-                        <div class="meal">
+                    <div class="card__menu__item">
+                        <div class="meal anim1">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Tartare de poulpe acidulé</h4>
@@ -49,7 +49,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim2">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Velouté de légumes d'antan</h4>
@@ -61,7 +61,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim3">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Soupe à l'oignon</h4>
@@ -77,8 +77,8 @@
                 </div>
                 <div class="card__menu">
                     <h3>PLATS</h3>
-                    <div class="card__menu__item anim2">
-                        <div class="meal">
+                    <div class="card__menu__item">
+                        <div class="meal anim1">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Coquilles Saint-Jacques</h4>
@@ -90,7 +90,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim2">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Magret de canard</h4>
@@ -102,7 +102,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim3">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Pigeonneau d’Ille-et-Vilaine</h4>
@@ -118,8 +118,8 @@
                 </div>
                 <div class="card__menu">
                     <h3>DESSERTS</h3>
-                    <div class="card__menu__item anim3">
-                        <div class="meal">
+                    <div class="card__menu__item">
+                        <div class="meal anim1">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Pétales de violettes glacés</h4>
@@ -131,7 +131,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim2">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Fondant au chocolat</h4>
@@ -143,7 +143,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim3">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Millefeuille croustillant</h4>
