--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -37,8 +37,8 @@
             <div class="card">
                 <div class="card__menu">
                     <h3>ENTRÉES</h3>
-                    <div class="card__menu__item anim1">
-                        <div class="meal">
+                    <div class="card__menu__item">
+                        <div class="meal anim1">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Ravioles de foie gras</h4>
@@ -50,7 +50,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim2">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Caviar osciètre</h4>
@@ -62,7 +62,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim3">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Homard et espuma de potiron</h4>
@@ -74,7 +74,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim4">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Foie gras de canard cuit entier</h4>
@@ -90,8 +90,8 @@
                 </div>
                 <div class="card__menu">
                     <h3>PLATS</h3>
-                    <div class="card__menu__item anim2">
-                        <div class="meal">
+                    <div class="card__menu__item">
+                        <div class="meal anim1">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Noix de coquilles Saint-Jacques</h4>
@@ -103,7 +103,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim2">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Langoustine poêlée</h4>
@@ -115,7 +115,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim3">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Mijoté de queue de boeuf </h4>
@@ -131,8 +131,8 @@
                 </div>
                 <div class="card__menu">
                     <h3>DESSERTS</h3>
-                    <div class="card__menu__item anim3">
-                        <div class="meal">
+                    <div class="card__menu__item">
+                        <div class="meal anim1">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Macaron noisette et chocolat</h4>
@@ -144,7 +144,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim2">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Baba au rhum revisité </h4>
@@ -156,7 +156,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim3">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Tarte au citron meringuée </h4>
