--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -35,10 +35,10 @@
                 <i class="fas fa-heart"></i>
             </div>
             <div class="card">
-                <div class="card__menu anim1">
+                <div class="card__menu">
                     <h3>ENTRÉES</h3>
                     <div class="card__menu__item">
-                        <div class="meal">
+                        <div class="meal anim1">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Tartare de thon</h4>
@@ -50,7 +50,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim2">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Bouchée de homard croustillant</h4>
@@ -62,7 +62,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim3">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Velouté de cèpes</h4>
@@ -76,10 +76,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu anim2">
+                <div class="card__menu">
                     <h3>PLATS</h3>
                     <div class="card__menu__item">
-                        <div class="meal">
+                        <div class="meal anim1">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Poulet rôti aux herbes de Provence</h4>
@@ -92,7 +92,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim2">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Langouste rôtie</h4>
@@ -105,7 +105,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal anim3">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Côte de boeuf Angus</h4>
@@ -120,10 +120,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu anim3">
+                <div class="card__menu">
                     <h3>DESSERTS</h3>
                     <div class="card__menu__item">
-                        <div class="meal">
+                        <div class="meal anim1">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Farandole de desserts</h4>
@@ -136,7 +136,7 @@
                             </div>
                         </div>
 
-                        <div class="meal">
+                        <div class="meal anim2">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Crème brulée</h4>
@@ -149,7 +149,7 @@
                             </div>
                         </div>
 
-                        <div class="meal">
+                        <div class="meal anim3">
                             <div class="meal__info">
                                 <div class="meal__info__text">
                                     <h4 class="meal__info__title">Tiramisu</h4>
